--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -94,7 +94,7 @@
 <body>
 
   <header>
-    <img src="Ima/Logo.png" alt="Juguetería Acción Total" style="width: 150px; height: auto;">
+    <img src="Logo.png" alt="Juguetería Acción Total" style="width: 150px; height: auto;">
     <h1>Bienvenidos a JUGUETERÍA ACCIÓN TOTAL</h1>
     <nav>
       <a href="#inicio">Inicio</a>
@@ -137,19 +137,19 @@
     <p>Estos son algunos de nuestros muñecos más populares:</p>
 
     <div class="producto">
-      <img src="Ima/Soldado.png" alt="Muñeco de acción con uniforme militar y arma">
+      <img src="Soldado.png" alt="Muñeco de acción con uniforme militar y arma">
       <p>Muñeco de acción soldado primera línea</p>
       <p><span class="precio-original">$330</span><br><span class="precio-oferta">$260</span></p>
     </div>
 
     <div class="producto">
-      <img src="Ima/Luchador.png" alt="Muñeco luchador con máscara">
+      <img src="Luchador.png" alt="Muñeco luchador con máscara">
       <p>Muñeco de acción luchador amateur</p>
       <p><span class="precio-original">$320</span><br><span class="precio-oferta">$230</span></p>
     </div>
 
     <div class="producto">
-      <img src="Ima/Mujer.png" alt="Muñeca soldado de élite con armadura táctica">
+      <img src="Mujer.png" alt="Muñeca soldado de élite con armadura táctica">
       <p>Muñeca de acción soldado de élite</p>
       <p><span class="precio-original">$350</span><br><span class="precio-oferta">$250</span></p>
     </div>
