--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -178,7 +178,14 @@
       <li>No almacenamos información bancaria de los usuarios.</li>
     </ul>
   </section>
-
+  <section style="text-align: center; margin: 40px 0;">
+  <h2>Galería de nuestros productos</h2>
+  <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; padding: 20px;">
+    <img src="Ima/" alt="Vale Aguilar Jesus Enrique" style="width: 300px; border-radius: 10px;">
+    <img src="Ima/celeste" alt="Cazanova Santoyo Nbfsta Celeste" style="width: 300px; border-radius: 10px;">
+    <img src="Ima/Alex" alt="Villa Ortiz Alexander" style="width: 300px; border-radius: 10px;">
+  </div>
+</section>
   <footer>
     <p>&copy; 2025 JUGUETERÍA ACCIÓN TOTAL</p>
     <div class="sellos">
