--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -179,7 +179,7 @@
     </ul>
   </section>
   <section style="text-align: center; margin: 40px 0;">
-  <h2>Integrantes</h2>
+  <h2>"Integrantes"</h2>
   <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; padding: 150px;">
     <img src="Ima/" alt="Vale Aguilar Jesus Enrique" style="width: 150px; border-radius: 150px;">
     <img src="Ima/celeste.png" alt="Cazanova Santoyo Nebfsta Celeste" style="width: 150px; border-radius: 10px;">
