--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -181,7 +181,7 @@
   <section style="text-align: center; margin: 10px 0;">
   <h2>Integrantes</h2>
   <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; padding: 10px 0;">
-    <img src="Ima/yo" alt="Vale Aguilar Jesus Enrique" style="width: 150px; border-radius: 10px;">
+    <img src="Ima/yo.png" alt="Vale Aguilar Jesus Enrique" style="width: 150px; border-radius: 10px;">
     <img src="Ima/celeste.png" alt="Cazanova Santoyo Nebfsta Celeste" style="width: 150px; border-radius: 10px;">
     <img src="Ima/Alex.png" alt="Villa Ortiz Alexander" style="width: 150px; border-radius: 10px;">
   </div>
